finalize work on fixing player window dragging
player now will be only draggable via header. weird offscreen glitching
is gone now. (uses native drag)

--- a/src/app/styl/views/player.styl
+++ b/src/app/styl/views/player.styl
@@ -1,3 +1,9 @@
+.dragzone
+  -webkit-app-region: drag;
+  position: fixed;
+  display: none;
+
+
 .loading
     position: absolute
     background-color: BgColor1
